--- a/app/src/main/res/layout/content_login_handler.xml
+++ b/app/src/main/res/layout/content_login_handler.xml
@@ -18,7 +18,8 @@
         android:text="Login"
         android:id="@+id/loginButton"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        />
 
     <EditText
         android:layout_width="wrap_content"
@@ -26,28 +27,45 @@
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/textPass"
+        android:layout_marginBottom="20dp"
+        android:text="test"
+        android:background="@drawable/edittextstyle"
+        android:textAlignment="center"
         android:layout_above="@+id/loginButton"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="46dp"
-        android:text="test" />
+        android:layout_centerHorizontal="true" />
+
+
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textUser"
+        android:text="test"
+        android:background="@drawable/edittextstyle"
+        android:textAlignment="center"
         android:layout_above="@+id/textPass"
-        android:layout_alignLeft="@+id/textPass"
-        android:layout_alignStart="@+id/textPass"
         android:layout_alignRight="@+id/textPass"
         android:layout_alignEnd="@+id/textPass"
-        android:text="test" />
+        android:layout_marginBottom="24dp"
+        android:layout_alignLeft="@+id/textPass"
+        android:layout_alignStart="@+id/textPass" />
+
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sign up"
         android:id="@+id/SignupButton"
+        android:layout_below="@+id/textView13"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Don&apos;t have an account? Sign up here"
+        android:id="@+id/textView13"
+        android:layout_marginTop="62dp"
         android:layout_below="@+id/loginButton"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="39dp" />
+        android:layout_alignLeft="@+id/textPass"
+        android:layout_alignStart="@+id/textPass" />
 </RelativeLayout>
