--- a/app/src/main/res/layout/content_login_handler.xml
+++ b/app/src/main/res/layout/content_login_handler.xml
@@ -18,8 +18,10 @@
         android:text="Login"
         android:id="@+id/loginButton"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
     <EditText
         android:layout_width="wrap_content"
@@ -32,7 +34,10 @@
         android:background="@drawable/edittextstyle"
         android:textAlignment="center"
         android:layout_above="@+id/loginButton"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/loginButton"
+        android:layout_alignEnd="@+id/loginButton" />
 
 
 
@@ -64,8 +69,7 @@
         android:layout_height="wrap_content"
         android:text="Don&apos;t have an account? Sign up here"
         android:id="@+id/textView13"
-        android:layout_marginTop="62dp"
+        android:layout_marginTop="59dp"
         android:layout_below="@+id/loginButton"
-        android:layout_alignLeft="@+id/textPass"
-        android:layout_alignStart="@+id/textPass" />
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
