--- a/app/src/main/res/layout/activity_add_workout_handler.xml
+++ b/app/src/main/res/layout/activity_add_workout_handler.xml
@@ -19,7 +19,9 @@
         android:layout_marginTop="38dp"
         android:layout_below="@+id/seekBarIntensity"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/buttonUback"
+        android:layout_alignEnd="@+id/buttonUback" />
 
     <Button
         android:layout_width="250px"
